# maestro-agentic

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INITIAL_COMMIT_CHECKLIST.md  Jenkinsfile  LICENSE  PROJECT_OVERVIEW.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
band_tour_agent/: agent.py  tools.py
finance_agent/: agent.py  tools.py
k8s/: backend.yaml  frontend.yaml
movie_agent/: agent.py  tools.py
movie_data/: user_preferences.json
orchestrator_agent/: agent.py
search_agent/: agent.py
web_ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web_ui/src/: App.jsx  index.css
workout_agent/: agent.py  tools.py
workouts/: Leg_Blaster_15.txt  flash home abs.md  morning_quick_strech.txt
